# blog-api-fork

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
backend/: pyproject.toml
backend/src/backend/config/: settings.py
