[project]
name = "blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.uv.workspace]
members = ["backend", "frontend"]

[dependency-groups]
dev = [
    "django-stubs>=6.0.3",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.uv]
managed = true
package = true

[tool.uv.sources]
backend = { workspace = true }

[tool.mypy]
# Ignores the "Skipping analyzing" errors
ignore_missing_imports = true

# Stops the "Need type annotation" errors in models
check_untyped_defs = false
disallow_untyped_defs = false

# Tells MyPy to ignore errors from third-party libraries

plugins = [
    "mypy_django_plugin.main",
]
mypy_path = "backend/src"
explicit_package_bases = true
namespace_packages = true

[tool.django-stubs]
django_settings_module = "backend.config.settings"

