[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JzKrpts", email = "261347858+JzKrpts@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-stubs>=6.0.3",
    "djangorestframework>=3.17.1",
    "environs[django]>=15.0.1",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
